--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,7 @@ tool_output/
 
 examples/chroma_db
 examples/chroma_db_bazi
+
+# Environment variables
+examples/.env
+examples/open_deep_research/.env
